<resources>
    <string name="app_name">计步器</string>
    <string name="title">计步器</string>
    <string name="history_step">查看历史步数</string>
    <string name="set_step">设置锻炼计划</string>
    <string name="support_step">该设备支持计步</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="history_record">历史记录</string>
    <string name="exercise_plan">锻炼计划</string>
    <string name="everyday_step">每日锻炼步数</string>
    <string name="save">保存</string>
    <string name="remind_time">提醒时间</string>
    <string name="number">000</string>
    <string name="button_clear">清零</string>
    <string name="start_time">开始计时</string>
    <string name="count_step">计步中…</string>
    <string name="stop_time">停止计时</string>
    <string name="zero_time">用时：00:00:00</string>
</resources>
