<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context="com.example.countstep.MainActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/title"
        app:popupTheme="@style/MenuTheme"
        android:fitsSystemWindows="true"
        >
       <TextView
           android:id="@+id/title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title"
           android:textSize="22sp"
           android:textColor="@color/white"
           android:gravity="center"
           android:layout_marginStart="140dp"
           />
    </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_set"
            android:layout_below="@+id/tool_bar1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:drawableStart="@mipmap/home_statistical"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/history_step"
            android:textColor="#333333" />

        <view.StepArcView
            android:id="@+id/cc"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/rl_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool_bar1"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@mipmap/home_question_mark"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/set_step"
            android:textColor="#333333" />
        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

    <!--<TextView-->
        <!--android:id="@+id/date"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/week"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="18sp"-->
        <!--/>-->
    <Chronometer
        android:id="@+id/rl_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/week"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:format="@string/zero_time"/>

    <TextView
        android:id="@+id/rl_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cc"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/rl_instance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_target"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/rl_Calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_instance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_isSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_Calorie"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/support_step"
        android:textColor="#333333"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/rl_button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_isSupport"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/button_clear"
        android:background="@drawable/bg_button"/>
    <Button
        android:id="@+id/rl_button_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_isSupport"
        android:layout_toEndOf="@+id/rl_button_clear"
        android:background="@drawable/bg_step"
        android:gravity="center"
        android:text="@string/start_time"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"/>

</RelativeLayout>
